--- a/Bind/Src/EdicionFcst.fx.yaml
+++ b/Bind/Src/EdicionFcst.fx.yaml
@@ -2625,7 +2625,7 @@ EdicionFcst As screen:
                                 )
                             )
                         )
-                    DisplayFields: =["Nombre_x0020_Producto_x002f_Proy"]
+                    DisplayFields: =["AreadeImpacto"]
                     DisplayMode: |-
                         =If(
                             Chk_AplicaPO.Checked,
@@ -2639,8 +2639,8 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
-                    SearchItems: =Search(Sort(Col_BD_Portafolio,'Nombre Producto/Proyecto',SortOrder.Ascending),DataCardValue55_2.SearchText,"Nombre_x0020_Producto_x002f_Proy")
+                    SearchFields: =["AreadeImpacto"]
+                    SearchItems: =Search(Sort(Col_BD_Portafolio,'Nombre Producto/Proyecto',SortOrder.Ascending),DataCardValue55_2.SearchText,"AreadeImpacto")
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
@@ -3717,7 +3717,7 @@ EdicionFcst As screen:
                                 )
                             )
                         )
-                    DisplayFields: =["Equipo_x002f_Squad"]
+                    DisplayFields: =["ComplianceAssetId"]
                     DisplayMode: |-
                         =If(
                             Chk_AplicaPO.Checked,
@@ -3731,8 +3731,8 @@ EdicionFcst As screen:
                     PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
-                    SearchFields: =["Equipo_x002f_Squad"]
-                    SearchItems: =Search(Sort(Col_BD_Equipos,'Equipo/Squad',SortOrder.Ascending),DataCardValue46_3.SearchText,"Equipo_x002f_Squad")
+                    SearchFields: =["ComplianceAssetId"]
+                    SearchItems: =Search(Sort(Col_BD_Equipos,'Equipo/Squad',SortOrder.Ascending),DataCardValue46_3.SearchText,"ComplianceAssetId")
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
