--- a/Bind/Src/ModuloPersona.fx.yaml
+++ b/Bind/Src/ModuloPersona.fx.yaml
@@ -830,7 +830,7 @@ ModuloPersona As screen:
                     //Table({NombreGerencia: ThisItem.GerenciaOrigen})
                     //!IsBlank(_VarNuevoIDPErsona
                     //Filter(Col_BD_Gerencia,NombreGerencia= LookUp(Col_BD_Persona, Usuario = Upper(Txt_Usuario.Text), GerenciaOrigen))
-                DisplayFields: =["NombreGerencia"]
+                DisplayFields: =["ComplianceAssetId"]
                 DisplayMode: =Parent.DisplayMode
                 Height: =Txt_FondoForm1_49.Height -10
                 HoverBorderColor: =RGBA(0, 121, 187, 1)
@@ -839,8 +839,8 @@ ModuloPersona As screen:
                 OnChange: =
                 PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                 PressedFill: =RGBA(0, 121, 187, 1)
-                SearchFields: =["NombreGerencia"]
-                SearchItems: =Search(Filter(Col_BD_Gerencia, Nivel = "2"),Cmb_GerenciaOrigen.SearchText,"NombreGerencia")
+                SearchFields: =["ComplianceAssetId"]
+                SearchItems: =Search(Filter(Col_BD_Gerencia, Nivel = "2"),Cmb_GerenciaOrigen.SearchText,"ComplianceAssetId")
                 SelectionFill: =RGBA(0, 121, 187, 1)
                 SelectMultiple: =false
                 Tooltip: =Parent.DisplayName
@@ -2283,7 +2283,7 @@ ModuloPersona As screen:
                 ={Title: LookUp(Col_BD_Dominios, IDDominio = LookUp(Col_BD_Equipos, IDEquipo = ThisItem.IDEquipo,IDDominio),Title)}
             DefaultSelectedItems: |-
                 =Table({Title: LookUp(Col_BD_Dominios, IDDominio = LookUp(Col_BD_Equipos, IDEquipo = ThisItem.IDEquipo,IDDominio),Title)})
-            DisplayFields: =["Title"]
+            DisplayFields: =["ComplianceAssetId"]
             Height: =Txt_FondoForm1_9.Height - 10
             HoverBorderColor: =RGBA(0, 121, 187, 1)
             InputTextPlaceholder: ="Buscar Dominio"
@@ -2296,12 +2296,12 @@ ModuloPersona As screen:
             OnChange: =
             OnSelect: =Select(Parent)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["Title"]
+            SearchFields: =["ComplianceAssetId"]
             SearchItems: |-
                 =Search(Sort(
                     Filter(Col_BD_Dominios, !(Title = "Dominio de Prueba" ) && !(Title = "Historico Portafolio")),
                     Title, SortOrder.Ascending
-                ),Cmb_IC_Dominios.SearchText,"Title")
+                ),Cmb_IC_Dominios.SearchText,"ComplianceAssetId")
             SelectMultiple: =false
             Width: =Txt_FondoForm1_9.Width - 27
             X: =220
