--- a/Bind/Src/ModuloProyectosIniciativas.fx.yaml
+++ b/Bind/Src/ModuloProyectosIniciativas.fx.yaml
@@ -681,7 +681,7 @@ ModuloProyectosIniciativas As screen:
                         AplicaDatos: Chk_AplicaDatos_1.Checked,  
                         AplicaUx: Chk_AplicaUx_1.Checked,      
                         Estado_Iniciativa:If(First(ProyectoSeleccionado).Iniciativa,Dpd_Gl_EstadoProductoProyecto.Selected.Value,""),
-                        Estado:If(First(ProyectoSeleccionado).Estado="Finazalizado" , "Finazalizado",
+                        Estado:If(First(ProyectoSeleccionado).Estado="Finalizado" , "Finalizado",
                                 If(First(ProyectoSeleccionado).Estado="Solicitud de finalización" || Dpd_Gl_EstadoProductoProyecto.Selected.Value ="Finalizado","Solicitud de finalización",
                                 Dpd_Gl_EstadoProductoProyecto.Selected.Value)),
                         'Bring Buy Build': Cmb_Pry_BBB_1.SelectedItems,
@@ -805,7 +805,7 @@ ModuloProyectosIniciativas As screen:
                         AplicaDatos: Chk_AplicaDatos_1.Checked,  
                         AplicaUx: Chk_AplicaUx_1.Checked,      
                         Estado_Iniciativa:If(First(ProyectoSeleccionado).Iniciativa,Dpd_Gl_EstadoProductoProyecto.Selected.Value,""),
-                        Estado:If(First(ProyectoSeleccionado).Estado="Finazalizado" , "Finazalizado",
+                        Estado:If(First(ProyectoSeleccionado).Estado="Finalizado" , "Finalizado",
                                 If(First(ProyectoSeleccionado).Estado="Solicitud de finalización" || Dpd_Gl_EstadoProductoProyecto.Selected.Value ="Finalizado","Solicitud de finalización",
                                 Dpd_Gl_EstadoProductoProyecto.Selected.Value)),
                         'Bring Buy Build': Cmb_Pry_BBB_1.SelectedItems,
