--- a/Bind/Src/ModuloGestionEquipoV1.fx.yaml
+++ b/Bind/Src/ModuloGestionEquipoV1.fx.yaml
@@ -223,8 +223,8 @@ ModuloGestionEquipoV1 As screen:
                     UpdateContext({_VarEliminarUsuario:true});
                 Tooltip: ="Cambiar de Equipo"
                 Width: =35
-                X: =1093
-                Y: =61
+                X: =795
+                Y: =56
                 ZIndex: =10
 
             Icon9_1 As icon.Trash:
@@ -239,9 +239,38 @@ ModuloGestionEquipoV1 As screen:
                 Rotation: =90
                 Tooltip: ="Cambiar de Equipo"
                 Width: =35
+                X: =746
+                Y: =53
+                ZIndex: =11
+
+            Image35 As image:
+                Height: =35
+                Image: ='cambiar (2)'
+                OnSelect: =Select(Parent)
+                Width: =35
                 X: =1045
                 Y: =61
-                ZIndex: =11
+                ZIndex: =12
+
+            Image36 As image:
+                Height: =35
+                Image: ='bote-de-basura'
+                OnSelect: =Select(Parent)
+                Width: =35
+                X: =1093
+                Y: =61
+                ZIndex: =13
+
+            Button34 As button:
+                Fill: =RGBA(0, 0, 0, 0)
+                Height: =35
+                HoverFill: =RGBA(255, 255, 255, 0.48)
+                OnSelect: =Select(Parent)
+                Text: =""
+                Width: =35
+                X: =1045
+                Y: =61
+                ZIndex: =14
 
         Txt_BuscadorPersona_1 As text:
             BorderColor: =RGBA(53, 61, 63, 1)
